# cudaBayesreg

./: .directory  DESCRIPTION  MD5  NAMESPACE  NEWS  README  README.html  configure  configure.ac
R/: buildzstat.volume.R  cudaMultireg.volume.R  cudaMultiregslice.R  plot.hcoef.post.R  pmeans.hcoef.R  post.overlay.R  post.ppm.R  post.randeff.R  post.tseries.R  premask.R  read.Zsegslice.R  read.fmrisample.R  read.fmrislice.R  regpostsim.R
data/: design.txt  filtered_func_data.nii  mask.nii  niislicets.Rdata  swrfM_design.txt
inst/: CITATION
man/: buildzstat.volume.Rd  cudaMultireg.slice.Rd  cudaMultireg.volume.Rd  design.Rd  filtered_func_data.Rd  fmri.Rd  fmri_design.Rd  fmri_filtered_func_data.Rd  mask.Rd  plot.bayesm.mat.Rd  plot.hcoef.post.Rd  pmeans.hcoef.Rd  post.overlay.Rd  post.ppm.Rd  post.randeff.Rd  post.shrinkage.mean.Rd  post.shrinkage.minmax.Rd  post.simul.betadraw.Rd  post.simul.hist.Rd  post.tseries.Rd  premask.Rd  read.Zsegslice.Rd  read.fmrisample.Rd  read.fmrislice.Rd  regpostsim.Rd  swrfM_design.Rd
src/: Makefile  Makefile.in  cudaMultireg.cu  cudaMultiregKnr.cu  cudaMultiregKnr0.cu  cudaMultiregKnr1.cu  cudaMultiregKnr2.cu  d_nr3.h  d_rng.cu  d_rngBrent.cu  d_rngMT.cu  d_rngMars.cu  d_rngNR.cu  mycudamath.cu  newmat.h  readdesign.cc  utilsFuncs.h  utilsNewmat.cc  utilsRmultireg.cc  utilsSeeds.cc
src/cutil/: .directory  Makefile  Makefile.in
src/newmat11/: Makefile  Makefile.in  include.h  myexcept.cpp
